# macpow

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix
.github/workflows/: ci.yml
src/: app.rs  battery.rs  cf_utils.rs  iokit_ffi.rs  ioreport.rs  lib.rs  main.rs  metrics.rs  peripherals.rs  powermetrics.rs  sma.rs  smc.rs  types.rs
tests/: integration.rs
